--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Motherships Mesh Animation Template",
-  "descriptions": ["Mesh animation template for the motherships"],
+  "descriptions": ["Mesh animation template for motherships and super motherships"],
   "information": "https://github.com/WinterNox/Mothership-Mesh-Animation-Template",
   "entry_point": "level.lua",
   "has_score_leaderboard": false
